update error recording

--- a/问题记录.md
+++ b/问题记录.md
@@ -3,7 +3,7 @@ title: 问题记录
 category: user guide
 ---
 
-### 1.启动ranger admin报错：[E] 007-updateBlankPolicyName.sql import failed!
+###  1. [Ranger] : 启动ranger admin报错：[E] 007-updateBlankPolicyName.sql import failed!
 更改msyql数据的参数：
 
 临时方案：
@@ -33,10 +33,10 @@ MySQL [(none)]> show variables like 'log_bin_trust_function_creators';
 但此方案在mysql重启后会更改回来，因此记得在my.cnf配置文件中添加：
 log_bin_trust_function_creators=1
 
-### 2.启动ambari agent后，Service和host状态提示黄色问号
+---
+### 2. [Ambari] : 启动ambari agent后，Service和host状态提示黄色问号
 
 mbari 所有Service提示黄色问号，一般为heartbeat lost引起，而这种情况为python版本问题
-
 
 解决方法：
 
@@ -55,8 +55,8 @@ verify=disable
 ```
 verify这里有可能是enable或platform_default.将它改为disable，然后重启ambari agent，就可以正常连接了。
 
-
-### 3. python 问题，unknown locale: UTF-8解决方法
+---
+### 3. [Environment] : python 问题，unknown locale: UTF-8解决方法
 
 https://www.phodal.com/blog/unknown-locale-utf-8/
 
@@ -120,9 +120,8 @@ export LANG=en_US.UTF-8
 ```
 重启ambari-agent。
 
-
-
-### 4. zookeeper启动报错：Could not configure server because SASL configuration did not allow the ZooKeeper server to authenticate itself properly: javax.security.auth.login.LoginException: Receive timed out
+---
+### 4. [Zookeeper] :  zookeeper启动报错：Could not configure server because SASL configuration did not allow the ZooKeeper server to authenticate itself properly: javax.security.auth.login.LoginException: Receive timed out
 
 或者使用hadoop命令：
 No valid credentials provided (Mechanism level: Receive timed out)
@@ -134,14 +133,16 @@ https://community.hortonworks.com/content/supportkb/149955/errorcould-not-config
 [libdefaults]
 udp_preference_limit = 1
 ```
-### 5. 添加jce，否者kerberos有问题
+
+---
+### 5. [Environment] :  添加jce，否者kerberos有问题
 
 下载jce并解压至JAVA_HOME/jre/lib/security目录下，AMbari所有节点均需要
 http://www.oracle.com/technetwork/java/javase/downloads/jce8-download-2133166.html
 unzip -o -j -q jce_policy-8.zip -d   $JAVA_HOME/jre/lib/security
 
-
-### 6. hive view查询报错 “S020 Data storage error ”
+---
+### 6. [Ambari] : hive view查询报错 “S020 Data storage error ”
 
 报错日志：
 ```
@@ -152,7 +153,6 @@ Caused by: javax.persistence.RollbackException: Exception [EclipseLink-4002] (Ec
 Internal Exception: com.mysql.jdbc.exceptions.jdbc4.MySQLSyntaxErrorException: Table 'ambari.DS_JOBIMPL_7' doesn't exist
 Error Code: 1146
 ```
-
 
 原因:
 在mysql中创建元数据表时报错了
@@ -188,7 +188,6 @@ CREATE TABLE DS_JOBIMPL_7 (
 ```
 ERROR 1118 (42000): Row size too large. The maximum row size for the used table type, not counting BLOBs, is 65535. This includes storage overhead, check the manual. You have to change some columns to TEXT or BLOBs
 ```
-
 
 临时方案：
 在hive中创建表：
@@ -235,9 +234,8 @@ select * from ambari_sequences;
 
 ```
 
-
-
-### 7.file view等报错
+---
+### 7. [Ambari] : file view等报错
 
 类似：
 Service 'ats' check failed: Server Error
@@ -252,7 +250,7 @@ hadoop fs -chown admin:hdfs /user/admin
 hadoop fs -chmod 755/user/admin
 
 
-### 清空SSSD缓存
+### 8. [Kerberos] : 清空SSSD缓存
 
 ```
 sss_cache -E
@@ -260,17 +258,3 @@ sss_cache -E
 
 
 
-====
-
-
-防火墙检查
-```
-[root@cvm-da-datasvr-whd3 bin]# systemctl status firewalld.service
-● firewalld.service - firewalld - dynamic firewall daemon
-   Loaded: loaded (/usr/lib/systemd/system/firewalld.service; disabled; vendor preset: enabled)
-   Active: inactive (dead)
-[root@cvm-da-datasvr-whd3 bin]# systemctl status iptables.service
-● iptables.service
-   Loaded: not-found (Reason: No such file or directory)
-   Active: inactive (dead)
-```
