--- a/问题记录.md
+++ b/问题记录.md
@@ -1,6 +1,6 @@
 ---
 title: 问题记录
-category: user guide
+category: Operations Guide
 ---
 
 ###  1. [Ranger] : 启动ranger admin报错：[E] 007-updateBlankPolicyName.sql import failed!
@@ -256,5 +256,74 @@ hadoop fs -chmod 755/user/admin
 sss_cache -E
 ```
 
+### 9. [Ranger] : Ranger同步时报找不到认证文件
 
+/usr/hdp/current/ranger-usersync/conf/mytruststore.jks文件并不存在。
 
+解决方案：
+```
+$JAVA_HOME/bin/keytool -import -trustcacerts -alias root -file /usr/hdp/current/ranger-usersync/conf/ad-devsvr.wesuretest.cn-1.cer -keystore /usr/hdp/current/ranger-usersync/conf/mytruststore.jks
+```
+
+ad-devsvr.wesuretest.cn-1.cer是从AD服务器上下载的认证文件。
+
+注：输入过程中可能会要求输入密码，此密码需要配置到ranger.usersync.truststore.password中
+
+### 10. [Hive] : hive上执行mapreduce操作报错：
+```
+Error: Error while processing statement: FAILED: Execution Error, return code 2 from org.apache.hadoop.hive.ql.exec.mr.MapRedTask (state=08S01,code=2)
+```
+
+查看yarn上日志如下：
+```
+Application application_1533553019204_0001 failed 2 times due to AM Container for appattempt_1533553019204_0001_000002 exited with exitCode: 1
+For more detailed output, check application tracking page:http://cvm-os-devsvr-spark1:8088/proxy/application_1533553019204_0001/Then, click on links to logs of each attempt.
+Diagnostics: Exception from container-launch.
+Container id: container_1533553019204_0001_02_000001
+Exit code: 1
+Stack trace: ExitCodeException exitCode=1:
+at org.apache.hadoop.util.Shell.runCommand(Shell.java:604)
+at org.apache.hadoop.util.Shell.run(Shell.java:507)
+at org.apache.hadoop.util.Shell$ShellCommandExecutor.execute(Shell.java:789)
+at org.apache.hadoop.yarn.server.nodemanager.LinuxContainerExecutor.launchContainer(LinuxContainerExecutor.java:399)
+at org.apache.hadoop.yarn.server.nodemanager.containermanager.launcher.ContainerLaunch.call(ContainerLaunch.java:302)
+at org.apache.hadoop.yarn.server.nodemanager.containermanager.launcher.ContainerLaunch.call(ContainerLaunch.java:82)
+at java.util.concurrent.FutureTask.run(FutureTask.java:266)
+at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1142)
+at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:617)
+at java.lang.Thread.run(Thread.java:745)
+Shell output: main : command provided 1
+main : run as user is hive
+main : requested yarn user is hive
+Writing to tmp file /yarn/nm/nmPrivate/application_1533553019204_0001/container_1533553019204_0001_02_000001/container_1533553019204_0001_02_000001.pid.tmp
+Container exited with a non-zero exit code 1
+Failing this attempt. Failing the application.
+```
+
+程序测试：
+
+```
+[root@cvm-os-devsvr-spark1 hadoop-mapreduce]# pwd
+/opt/cdh/cloudera/parcels/CDH/lib/hadoop-mapreduce
+[root@cvm-os-devsvr-spark1 hadoop-mapreduce]# yarn jar hadoop-mapreduce-examples-2.6.0-cdh5.14.2.jar pi 2 4
+
+```
+
+**分析与解决：**
+使用yarn logs查看，发现如下错误：
+```
+
+...  ...
+
+    at org.apache.hadoop.mapreduce.jobhistory.JobHistoryEventHandler.serviceInit(JobHistoryEventHandler.java:183)
+    ... 10 more
+Caused by: org.apache.hadoop.ipc.RemoteException(org.apache.hadoop.security.AccessControlException): Permission denied: user=hive, access=EXECUTE, inode="/user/history":mapred:supergroup:drwxrwx---
+    at org.apache.hadoop.hdfs.server.namenode.DefaultAuthorizationProvider.checkFsPermission(DefaultAuthorizationProvider.java:279)
+...  ...
+
+```
+
+临时解决方案：
+```
+hadoop dfs -chmod -R 777 /user/history
+```
